# exploring-agent-auth

./: .env.example  README.md  RESTRUCTURE_PROMPT.md  docker-compose.yml  pyproject.toml
framework/: __init__.py  agent.py  auth_helpers.py  config.py  display.py  runner.py
framework/mcp/: auth.py  document_server.py  expense_server.py
framework/services/: auth_presets.py  identity.py
infra/keycloak/: realm-export.json
infra/opa/: agent_side.rego  data.json  tool_side.rego
notebooks/: 00_setup_verification.ipynb  01_service_credential.ipynb  02_inline_claim_authz.ipynb  03_external_authz_agent.ipynb  04_identity_param.ipynb  05_jwt_passthrough.ipynb  06_token_exchange.ipynb  07_external_authz_tool.ipynb  08_three_legged_oauth.ipynb
patterns/p00_setup/: notebook.ipynb
patterns/p01_service_credential/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p02_identity_param/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p03_inline_claim_agent/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p04_external_authz_agent/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p05_jwt_passthrough/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p06_token_exchange/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p07_external_authz_tool/: mcp_auth.py  notebook.ipynb  service_auth.py
patterns/p08_three_legged_oauth/: mcp_auth.py  notebook.ipynb  service_auth.py
services/document-service/: auth.py  main.py  seed_data.py
shared/: __init__.py  agent.py  auth.py  config.py  display.py  tools.py
(+9 files in other folders)
